vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_non_result_nested_if.vv
fn main() {
	ok := true
	other := true
	_ := if ok {
		if other {
			$embed_file(@FILE)
		} else {
			$embed_file(@FILE)
		}
		0
	} else {
		1
	}
}
